--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,5 +6,5 @@ div {
     width: 500px;
     height: 500px;
     border: 1px solid black;
-    background: pink;
+    background:url("../images/bb.jpg") center center;
 }
